--- a/Project/Frontend/package.json
+++ b/Project/Frontend/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
+    "ol": "^9.2.4",
+    "ol-ext": "^4.0.18",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
