--- a/Project/Backend/WebShopAppREST/src/.classpath
+++ b/Project/Backend/WebShopAppREST/src/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="main/java"/>
 	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/aopalliance-repackaged-2.6.1.jar"/>
 	<classpathentry kind="lib" path="main/webapp/WEB-INF/lib/hk2-api-2.6.1.jar"/>
